1999-06-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (noinst_LTLIBRARIES, lib_LTLIBRARIES): Substitute
	{inst,noinst}LIBS.
	(EXTRA_LTLIBRARIES): New variable.
	(MODULE): New variable.

1999-05-29  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (INCLUDES): Add $(top_builddir)/libobjc (for
	objc/externvar.h).

1999-05-24  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (noinst_LTLIBRARIES): Switch from lib_LTLIBRARIES.

1999-04-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* tclObjc.m: Undef PACKAGE and VERSION after inclusion of ffi.h.
	Include misc.h instead of stdlib.h and string.h.

	* TkInterp.m: Include misc.h instead of unistd.h and stdlib.h.

	* TclInterp.m: Include misc.h instead of stdio.h, stdarg.h,
	string.h, stdlib.h, and unistd.h.

	* List.m: Include misc.h instead of stdlib.h.

1999-04-27  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* tclObjc.m (tclObjc_msgSendToClientData): Initialize argnum to zero
	to avoid warning on Irix.

1999-04-19  Marcus G. Daniels  <mgd@helen.santafe.edu>

	* tclObjc.m: Don't declare strchr.

1999-03-14  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (libtclobjc_la_LIBADD), tclObjc.m: 
	Always ignore objc-malloc.

	* Makefile.am (INCLUDES): Include -I for libobjc.

1999-03-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (OBJCFLAGS): Use @CFLAGS_NOWARN_IMPLICIT_INT@
	instead of -Wno-implicit-int.

1999-02-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (REVISION): Bump.  Version 1.4.1.

1999-02-01  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (TCL_LIBRARY, TK_LIBRARY): Don't compute from
	t{cl,k}Config.sh file.  Get value from autoconf substitution.

1999-01-25  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* TkInterp.m: Use __CYGWIN__ instead of __CYGWIN32__.

	* tclObjc.m (BUGGY_BUILTIN_APPLY): Set if __CYGWIN__. 

1999-01-22  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
