@@ -1,3 +1,9 @@
+1999-06-14  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* tclObjc.m (tclObjc_msgSendToClientData): Rip out all the
+	`special hack' stuff.  It's unportable, and
+	__builtin_apply/libffi/avcall will do the job just fine.
+
 1999-06-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* Makefile.am (noinst_LTLIBRARIES, lib_LTLIBRARIES): Substitute
